[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://Wrapper.tscn" type="PackedScene" id=2]
[ext_resource path="res://LifeBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://sounds/Explosion 5 - Sound effects Pack 2.ogg" type="AudioStream" id=4]
[ext_resource path="res://sounds/Hit 1 - Sound effects Pack 2.ogg" type="AudioStream" id=5]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.473373, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 2 )

[node name="Enemy" type="RigidBody2D"]
collision_layer = 1024
collision_mask = 1025
mode = 2
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -10, -20, 0, 0, 10, 20, 0 )

[node name="Wrapper" parent="." instance=ExtResource( 2 )]

[node name="LifeBar" parent="." instance=ExtResource( 3 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="Explosion" type="Particles2D" parent="."]
emitting = false
amount = 50
lifetime = 3.0
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 3 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
pitch_scale = 1.5
[connection signal="hit" from="." to="." method="_on_Enemy_hit"]
[connection signal="stop" from="." to="." method="_on_Enemy_stop"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
